[package]
name = "newtype"
version = "0.1.0"
edition = "2021"

[features]
default = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive", "env", "wrap_help"] }
nom = "7.1.3"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
