[package]
name = "newtype"
version = "0.1.0"
edition = "2021"

[features]
default = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive", "env", "wrap_help"] }
itertools = "0.13.0"
lazy_static = "1.4.0"
lexpr = "0.2.7"
logos = "0.13.0"
nom = "7.1.3"
pest = { version = "2.6.0", features = ["pretty-print"] }
pest_derive = { version = "2.6.0", features = ["grammar-extras"] }
pretty = { version = "0.12.1", features = ["termcolor"] }
pretty_assertions = "1.3.0"
quickcheck = "1.0.3"
rstest = "0.21.0"
serde = { version = "1.0.204", features = ["derive", "serde_derive"] }
serde-lexpr = "0.1.3"
serde_derive = "1.0.204"
textwrap-macros = "0.3.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
