[package]
name = "newtype-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
name = "newtype_macros_lib"
path = "src/lib.rs"

[dependencies]
proc-macro2 = "*"
quote = "*"
syn = { version = "2.*", features = ["extra-traits", "full"] }

[dev-dependencies]
serde = { version = "1.0.204", features = ["serde_derive", "derive", "rc"] }
serde_derive = "1.0.204"
derivative = "2.2.0"
pest = { version = "2.6.0", features = ["pretty-print"] }
